# ninx

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cli/: CMakeLists.txt  main.cpp
evaluator/: DefaultEvaluator.cpp  DefaultEvaluator.h  Evaluator.h
evaluator/exception/: RuntimeException.h  VariableNotFoundException.cpp  VariableNotFoundException.h
examples/: esempio10.txt  example1.txt  example10.txt  example11.txt  example12.txt  example2.txt  example3.txt  example4.txt  example5.txt  example6.txt  example7.txt  example8.txt  example9.txt
lexer/: Context.cpp  Context.h  Lexer.cpp  Lexer.h  Reader.cpp  Reader.h
lexer/exception/: LexerException.cpp  LexerException.h
lexer/token/: BaseToken.cpp  BaseToken.h  Keyword.cpp  Keyword.h  Limiter.cpp  Limiter.h  Text.cpp  Text.h  TextToken.cpp  TextToken.h  Token.h  Type.h  Variable.cpp  Variable.h
lib/: CMakeLists.txt
lib/evaluator/: DefaultEvaluator.cpp  DefaultEvaluator.h  Evaluator.h
lib/evaluator/exception/: RuntimeException.cpp  RuntimeException.h
lib/lexer/: Lexer.cpp  Lexer.h  Reader.cpp  Reader.h
lib/lexer/exception/: LexerException.h
lib/lexer/token/: ExprOperator.cpp  ExprOperator.h  Keyword.cpp  Keyword.h  Limiter.h  Text.cpp  Text.h  Type.h  Variable.cpp  Variable.h
lib/parser/: Parser.cpp  Parser.h  TokenReader.cpp  TokenReader.h
lib/parser/element/: ASTElement.h  AddExpression.cpp  AddExpression.h  Assignment.cpp  Assignment.h  BinaryExpression.cpp  BinaryExpression.h  Block.cpp  Block.h  EqualExpression.cpp  Expression.cpp  Expression.h  ForStatement.cpp  ForStatement.h  FunctionArgument.cpp  FunctionArgument.h  FunctionCall.cpp  FunctionCall.h  FunctionCallArgument.cpp  FunctionCallArgument.h  FunctionDefinition.cpp  FunctionDefinition.h  IfCase.cpp  IfCase.h  IfCondition.cpp  IfCondition.h  IfStatement.cpp  IfStatement.h  MultiplicationExpression.cpp  NoopStatement.cpp  NoopStatement.h  SubtractExpression.cpp  SubtractExpression.h  TextElement.cpp  TextElement.h  Value.cpp  Value.h  VariableRead.cpp  VariableRead.h
lib/parser/element/expression/: AddExpression.cpp  AddExpression.h  DivisionExpression.cpp  DivisionExpression.h  EqualExpression.h  Expression.h  MultiplicationExpression.h  NotEqualExpression.cpp  NotEqualExpression.h
lib/parser/exception/: ParserException.cpp
lib/parser/util/: LateCallDescriptor.cpp  LateCallDescriptor.h
parser/: Parser.cpp  Parser.h  TokenReader.cpp  TokenReader.h
parser/element/: ASTElement.h  Assignment.cpp  Assignment.h  Block.cpp  Block.h  FunctionArgument.h  FunctionCall.cpp  FunctionCall.h  FunctionCallArgument.cpp  FunctionCallArgument.h  FunctionDefinition.cpp  FunctionDefinition.h  Statement.h  TextElement.cpp  TextElement.h  VariableRead.cpp  VariableRead.h
parser/exception/: ParserException.cpp  ParserException.h
test/: CMakeLists.txt  Tests.cpp
test/data/: test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
test/evaluation/: EvaluationTest.cpp
test/lexer/: ReaderTest.cpp
test/parser/: ParserTest.cpp
